Add support for tag definitions

--- a/example.cfg
+++ b/example.cfg
@@ -3,11 +3,19 @@
 roles = [ "saltmaster" ]
 
 [nodes.namenode]
+roles = [ "zookeeper" ]
+count = 3
+
+[tags.namenode]
+foo = "bar"
+
+[tags.namenode0]
+foo = "bar2"
+
+[nodes.namenode0]
 roles = [ "hadoop_master",
           "hbase_master",
           "zookeeper" ]
-count = 3
-flavor = "m1.xlarge"
 
 [nodes.datanode]
 roles = [ "elasticsearch",
@@ -30,7 +38,7 @@ rules = [ "tcp:0:65536:default",
 
 [aws]
 ssh_username = "ubuntu"
-flavor = "m1.small"
+flavor = "m1.xlarge"
 ami = "ami-d1b92ae1"
 region = "us-west-2"
 sgroup = "basic"
