Basic launch now working; adding support for tagging instances

--- a/example.cfg
+++ b/example.cfg
@@ -38,7 +38,7 @@ rules = [ "tcp:0:65536:default",
 
 [aws]
 ssh_username = "ubuntu"
-flavor = "m1.xlarge"
+flavor = "m1.small"
 ami = "ami-d1b92ae1"
 region = "us-west-2"
 sgroup = "basic"
