First crack at SGroup impl; various tweaks

--- a/example.cfg
+++ b/example.cfg
@@ -41,5 +41,5 @@ ssh_username = "ubuntu"
 flavor = "m1.small"
 ami = "ami-d1b92ae1"
 region = "us-west-2"
-sgroup = "basic"
+sgroup = "default"
 keyname = "defaultkey"
