Add sgroups command for generating security groups

--- a/example.cfg
+++ b/example.cfg
@@ -3,37 +3,26 @@
 roles = [ "saltmaster" ]
 
 [nodes.namenode]
+sgroup = "basic"
 roles = [ "zookeeper" ]
 count = 3
 
 [tags.namenode]
 foo = "bar"
 
-[tags.namenode0]
+[tags.namenode1]
 foo = "bar2"
 
-[nodes.namenode0]
+[nodes.namenode1]
 roles = [ "hadoop_master",
           "hbase_master",
           "zookeeper" ]
 
-[nodes.datanode]
-roles = [ "elasticsearch",
-          "hbase_slave",
-          "hadoop_slave",
-          "datanode" ]
-count = 3
-
-
-[nodes.api]
-roles = [ "api" ]
-count = 1
-
 [sgroups.basic]
 # Proto:FromPort:ToPort:(IpCidr|GroupId)
 # Proto:(IpCidr|GroupId)
-rules = [ "tcp:0:65536:default",
-          "udp:0:5:0.0.0/24" ]
+rules = [ "tcp:0:65535:default",
+          "udp:5:5:192.168.2.0/24" ]
 
 
 [aws]
